<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_professor">ProfessorActivity</string>
    <string name="professor_detalhe">Detalhes do professor</string>
    <string name="nome_professor">Nome do professor:</string>
    <string name="email_professor">Email do Professor</string>
    <string name="telefone_professor">Telefone professor</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_materia">MateriaActivity</string>
    <string name="hello_materia">Cadastrar Materia</string>
    <string name="text_professor">Professor:</string>
    <string name="text_materia">Descricao</string>
    <string name="professores_prompt">Professores</string>

    <string-array name="professores_array">
        <item>Daniel</item>
        <item>Thiagos</item>
        <item>Diego</item>
        <item>Rogério</item>
    </string-array>

</resources>
